fix: add overflow class to utility css

--- a/utilities/helper.css
+++ b/utilities/helper.css
@@ -278,3 +278,8 @@
 .z-10 {
 	z-index: 10;
 }
+
+/* overflow */
+.overflow-auto {
+	overflow: auto;
+}
